20000514-09:10 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.l
    ! Fixed parse error when DO OPTIONAL WITH ...
    * Changed FROM to FROM CLASS in AS Obect FROM CLASS ... (fixed conflict of FROM with DO FROM ...)
    * Changed AS ... ARRAY to AS ARRAY OF ...

20000514-14:55 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
	* fixed bug in line counting that was causing no code
	generated for statements placed within BEGIN/END SEQUENCE

20000513-14:50 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hbcomp.h
	* added 'int iDeclLine' to VAR structure to hold the line number
	where a variable was declared

    *source/compiler/harbour.c
    *source/compiler/harbour.y
	* fixed generation of 'unreachable code' warnings
	* warnings for declared but not used variable reports the line
	number where this variable was declared

20000513-13:51 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   - source/rtl/stringsx.c
     - removed
   + source/rtl/teditorl.c
     + added
   * source/rtl/Makefile
   * Makefile.bc
   * Makefile.vc
     * changed to reflect previous changes

20000513-00:51 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * Makefile.bc
     + added stringsx.c
   * Makefile.vc
     + added stringsx.c
   * source/rtl/Makefile
     ! fixed tab chars in file (I hope)

20000513-00:19 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/stringsx.c
     * Changed StrToken() to __StrToken()
     - removed unused functions
     + added standard copyright, please note that __StrToken() is NOT my work.
   * source/rtl/teditor.prg
     * StrToken() now is __StrToken()
   * ChangeLog, now saved as unix file, only cr at end of line, forced my editor to save all files
     as unix files regardless of their actual state.

20000512-08:00 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.y
    + Added support for END to be used with FOR loops.

   * include/hberrors.h